--- a/ssr/options/infer_example.yml
+++ b/ssr/options/infer_example.yml
@@ -9,7 +9,7 @@ manual_seed: 0
 
 # Root directory for low-res images you want super-resolved.
 # This can be in any directory structures, but the code expects pngs.
-data_dir: super_resolution_2023-12-08/test_set/sentinel2/
+data_dir: sentinel2/sentinel_2023/stitched
 
 n_lr_images: 8
 
@@ -26,6 +26,6 @@ network_g:
 
 # Load pretrained weights into the generator that is defined above
 path:
-  pretrain_network_g: experiments/sample_net_g.pth
+  pretrain_network_g: esrgan_8S2.pth
   param_key_g: params_ema
   strict_load_g: true
